--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/proprietyDB?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/occurrenceDB?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=password
 
@@ -11,4 +11,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Expose the embdded server port to 4000
-server.port=4000
+server.port=4002
