Rabbit It's work with publisher and consumer, on localhost

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/occurrenceDB?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3308/proprietyDB?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=password
 
