--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,15 @@
       <artifactId>hibernate-validator</artifactId>
       <version>6.1.5.Final</version>
     </dependency>
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
   </dependencies>
 
 	<build>
