Refactor, now the queue is on rabbit cloud insted of a local rabbit MQ

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 
 # Expose the embdded server port to 4000
 server.port=4002
+
+#Cloud amqp config
+spring.rabbitmq.addresses=amqps://user:password@hornet.rmq.cloudamqp.com/user
