--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,23 @@
-
-spring.datasource.url=jdbc:mysql://localhost:3308/proprietyDB?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=password
-
-spring.datasource.tomcat.test-while-idle=true
-spring.datasource.tomcat.validation-query=SELECT 1
-
+spring.datasource.url=${JDBC_DATASOURCE_URL}
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.generate-ddl=true
 
-# Expose the embdded server port to 4000
-server.port=4002
+###spring.datasource.url=jdbc:mysql://localhost:3308/proprietyDB?useSSL=false
+###spring.datasource.username=root
+###spring.datasource.password=password
+###
+###spring.datasource.tomcat.test-while-idle=true
+###spring.datasource.tomcat.validation-query=SELECT 1
+###
+###spring.jpa.show-sql=true
+###spring.jpa.hibernate.ddl-auto=update
+###spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+###
+#### Expose the embdded server port to 4000
+###server.port=4002
+###
+####Cloud amqp config
+###spring.rabbitmq.addresses=amqps://user:password@hornet.rmq.cloudamqp.com/user
 
-#Cloud amqp config
-spring.rabbitmq.addresses=amqps://user:password@hornet.rmq.cloudamqp.com/user
+
+
